--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,11 +7,11 @@
 html,
 body {
     background: #0a0a0a;
-    color: white;
+    color: rgb(245, 224, 224);
     font-family: Inter, system-ui, sans-serif;
     overflow-x: hidden;
 }
 
-.app {
+hh .app {
     min-height: 100vh;
 }
